# Bangumini

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: README_en.md
shared/: sort-collections.ts
shared/api/: anilist.ts  client.ts
shared/storage/: sqlite-cache.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkey_recorder.rs  lib.rs  main.rs
src/api/: oauth.ts
src/components/: CachedImage.tsx  CustomSelect.tsx  FetchIndicator.tsx  Layout.tsx  ShortcutRecorder.tsx  SubjectRow.tsx  icons.tsx
src/hooks/: useAuth.ts
src/pages/: CalendarPage.tsx  CollectionsPage.tsx  LoginPage.tsx  NextSeasonPage.tsx  SearchPage.tsx  SettingsPage.tsx  SubjectDetailPage.tsx
