[package]
name = "bangumini"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
