[package]
name = "bangumini"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-prevent-default = { version = "5", features = ["platform-windows"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
raw-window-handle = "0.6"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
